- Enable plone.app.caching :
  - to be able to cache annex content_category icon, adapted code so it works with full page caching;
  - get some informations asynchronously (portlet_todo, elements in collection portlet that may change (searchallmeetings term, counters);
  - linked items are loaded when collapsed section is opened;
  - use tooltipster for MeetingItem.listType;
  - added action 'Invalidate all cache' on portal_plonemeeting to invalidate all cache.
- Removed management of lateAttendees, if we have late attendees, we have to select user as present for meeting then set him
  as absent or excused from first item to item he joigned the meeting
- Fixed bug in manage_item_signatures_form if field 'assembly' was not used.  Free text field 'signatures' may be used together
  with contact field attendees and in this case, it was failing (Unauthorized)
- Migrate MeetingItem.itemInitiator to contacts
- Added possibility to link a Plone user to a contacts person (using field person.userid).
  Added method get_contact_infos to the document generation helper view so for example when an advice creator is linked to a person,
  we may use a particular held_position to render signatory infos
- Use _evaluateExpression from collective.behavior.talcondition everywhere to evaluate TAL expressions
- Disabled the 'Votes' functionnality and relative tab on the MeetingConfig.  'Poll type' related MeetingConfigs fields
  (usedPollTypes, defaultPollType) are moved at the bottom of the 'Data' tab
- Display the entire advice content in the tooltipster, now that advice content is loaded asynchronously (on hover), so we have
  access to entire Comment/Observations fields content, this avoids missing informations and problems while cropping advice content
- When mailing lists are wrongly defined on a POD template, do not crash the POD templates viewlet, display a clear message in the mailing list dropdown