@@ -21,6 +21,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   - get some informations asynchronously (portlet_todo, elements in collection portlet that may change (searchallmeetings term, counters);
   - linked items are loaded when collapsed section is opened;
   - use tooltipster for MeetingItem.listType;
+  - cache is invalidated when context/cfg/linkedmeeting changed.  Adapted code so every changes in external elements of the MeetingConfig
+    (faceted settings, subfolders, ...) notifyModified MeetingConfig;
   - added action 'Invalidate all cache' on portal_plonemeeting to invalidate all cache.
 - Removed management of lateAttendees, if we have late attendees, we have to select user as present for meeting then set him
   as absent or excused from first item to item he joigned the meeting
